--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html, body {
+  width: 100%;
+}
+
 body{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   background-color: rgb(33, 42, 43);
   font-family: "Inter", sans-serif;
+  overflow: hidden;
 }
 
 p {
@@ -12,29 +17,32 @@ p {
 
 .container-header {
   position: relative;
-  top: 0px;
-  width: 100%;
+  width: 100vw;
   height: auto;
   background-color: blueviolet;
   object-fit: contain;
+  padding: 12px;
 }
 
 .container-main {
-  width: auto;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .main {
-  width: 100%;
+  width: 84vw;
   background-color: rgb(94, 190, 132);
+  padding: 12px;
 }
 
 .container-navigation {
   position: relative;
-  height: 94vh;
+  width: 16vw;
+  height: 85vh;
   background-color: blanchedalmond;
+  padding: 12px;
 }
 
 .container-footer {
@@ -43,4 +51,5 @@ p {
   width: 100%;
   height: auto;
   background-color: cadetblue;
+  padding: 12px;
 }  
